resize the background

--- a/index.html
+++ b/index.html
@@ -2,11 +2,32 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="./style.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>portfolio</title>
 </head>
+
 <body>
-    
+    <div class="hero">
+    <h1>fazul</h1>
+        <!-- <img src="./images/2738.jpg"> -->
+        <a href="https://github.com/mohafazul/pet-webpage">pet-webpage</a><br><br>
+        <p>I have a passion in programming</p>
+        <h2>Educational bakground</h2>
+        <p>garissa university graduate 2021. Currently pursuing software development at Moringa school.</p>
+
+        <h4>Hobbies and Interests.</h4>
+        <ul>
+            <li>Playing and Watching Football</li>
+            <li>Swimming</li>
+            <li>Avid reader</li>
+        </ul>
+        
+
+    </div>
+</div>
+
+
 </body>
 </html>
